# healthcare-clinic-backend

./: .coverage  .deploy_log  .dockerignore  .env.example  .gitignore  AGENTS_API_DOCUMENTATION.md  APPOINTMENT_WEBHOOK_SETUP.md  BACKEND_ISSUE_FOUND.md  CONFIG_WHATSAPP_SCHEDULING.md  CONTEXT_CONFUSION_FIX.md  CRITICAL_FIXES_APPLIED.md  DEPLOYMENT_AUTO_TRANSLATION.md  DEPLOYMENT_HYBRID_SEARCH.md  DEPLOYMENT_SUMMARY.md  DISASTER_RECOVERY_MANUAL.md  DOCTOR_INFO_FIX_SUMMARY.md  Dockerfile  Dockerfile.nginx  EVALUATION_GUIDE.md  EVOLUTION_DUPLICATE_INSTANCES_FIX.md  EVOLUTION_FIXES_SUMMARY.md  EVOLUTION_RESTORE_GUIDE.md  EVOLUTION_WEBHOOK_UPDATE_GUIDE.md  FAQ_IMPLEMENTATION_SUMMARY.md  FAQ_INTEGRATION_TEST_REPORT.md  FIX_EVOLUTION_ENDPOINTS.md  IMPLEMENTATION_SUMMARY.md  LEGACY_INSTANCE_MIGRATION.md  NOCODB_DEPLOYMENT.md  NOCODB_SIMPLE_DEPLOYMENT.md  PHASE_6_MIGRATION_STATUS.md  PRICE_QUERY_FIX.md  QUICK_START.md  RAG_AND_MEM0_ANALYSIS.md  RAG_COMPLETE_SOLUTION.md  README.md  RELIABILITY_IMPROVEMENTS.md  ROLLBACK_PROCEDURES.md  SESSION_ID_COLUMN_FIX.md  TESTING_COMPLETE.md  (+200 more)
_archive/: AGENTS_API_DOCUMENTATION.md  BACKLOG.md  CALENDAR_SYNC_FIXES.md  CI_TEST.md  EVOLUTION_INSTANCE_STORAGE_ANALYSIS.md  FAQ_IMPLEMENTATION_SUMMARY.md  FINAL_TEST_REPORT.md  FSM_WEBHOOK_USAGE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTANCE_STATUS_REPORT.md  MULTI_DOCTOR_CALENDARS.md  OPTIMIZATION_SUMMARY.md  PHASE_6_MIGRATION_STATUS.md  PREVENTION_STRATEGIES_IMPLEMENTED.md  ROLLBACK_PROCEDURES.md  TIMEOUT_INCREASE_SUMMARY.md  UI_INTEGRATION_SETUP_GUIDE.md  UX_IMPROVEMENTS_SUMMARY.md  WEBHOOK_STATUS.md  diagnose_sync.md  (+2 more)
(+797 files in other folders)
